jsonschemadsl2ecore.trafo.opt/test/test02/validtests/example1.test2
{
	"name":"John",
	"surname":"Smith",
	"age":33,
	"adult":true,
	"job":{
		"role":"enngineer",
		"level":4
	}
	
}