jsonschemadsl2ecore.trafo.opt/test/test02/invalidtests/example2.test2
{
	"name":1,
	"surname":"Smith",
	"age":33,
	"adult":true,
	"job":{
		"role":"enngineer",
		"level":4
	}
	
}